crates/rb-storage-neo4j/tests/fixtures/cypher_attacks/reject/046.cypher
MATCH (n) RETURN n
; MATCH (m) DETACH DELETE m
